--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <div class="setting-div">
                 <span class="setting-description">lingua</span>
                 <div class="setting-options" id="language-option">
-                    <img src="../resources/uk-flag.png" alt="english" class="icon-selectable" data-state='active' onclick="setLanguage('english');"/>
-                    <img src="../resources/italy-flag.png" alt="italian" class="icon-selectable" data-state='inactive' onclick="setLanguage('italian');"/>
+                    <img src="resources/uk-flag.png" alt="english" class="icon-selectable" data-state='active' onclick="setLanguage('english');"/>
+                    <img src="resources/italy-flag.png" alt="italian" class="icon-selectable" data-state='inactive' onclick="setLanguage('italian');"/>
                 </div>
             </div>
             <div class="setting-div">
