--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <span class="material-symbols-outlined">add</span>
                 </div>
             </div>
-            <div class="setting-div last">
+            <div class="setting-div" >
                 <span class="material-symbols-outlined" onclick="setView('body-container')">arrow_back</span>
                 <span class="setting-description">TORNA AL GIOCO</span>
             </div>
